@@ -1,6 +1,6 @@
 DIST gamedata-all-1.19a.tgz 3703488 RMD160 3dad3b4b3aa80fb595749a6768376a245db89c12 SHA1 25ce550057c511b5cc2e4372163c0216eac35fcd SHA256 b9b9561b4155bfe3f8005315a7f8f95a567c2ebbcb2a950ad05dcb1702ac68de
-DIST hexen2source-1.4.3-rc1.tgz 2183823 RMD160 77b59055f2a40d794c4e0640624ff75524e85003 SHA1 31d06fed72739395907f49dcadae655e43e7231b SHA256 15c802228146717264c52dfe5798260c827b30f2e991a067211cf725669b86cd
+DIST hexen2source-1.4.3.tgz 2173736 RMD160 fd60113c5a6e6406ae21fdc13fa1704103f9ec4a SHA1 152da07cbd14bdaf33d1878851049c66db657363 SHA256 bbb9ffb5380b57be7dd7fecbbd9bba71846f2f17d5614b670e1df13710f7af0d
 DIST hexenworld-pakfiles-0.15.tgz 4948641 RMD160 bbc3d2368b01d60accf457b42f9ed5d247f94d1b SHA1 a7600b80b4205788b64fb57191e194c28b55b522 SHA256 49462cdf984deee7350d03c7d192d1c34d682647ffc9d06de4308e0a7c71c4d9
-EBUILD uhexen2-1.4.3_rc1.ebuild 12868 RMD160 ddb2c8a974c453ad82e2f46560a6ac96833122b4 SHA1 24a792b6280b85f4d6b7ab740a033d15aadd036c SHA256 3ffad7b7d78e7105f91321872b5c2c573f7dbf47103b10c1efa42003a0e006f4
-MISC ChangeLog 2182 RMD160 7b41171a553d4dba5d4da92236cd671c3e07b5cb SHA1 f9a4a0ce87e550cefa6910a6b22124ea176c46a3 SHA256 275a261af06ecb439abfa79aa4967a9f2f99525e1a24740660d4e08a552e0cda
+EBUILD uhexen2-1.4.3.ebuild 12809 RMD160 991fb82982b7fffbdec7ef8227f68d41639f0b26 SHA1 6fecc18283d71e7c5eeceee34dbb291ee94f5a4e SHA256 628d593b02cd73b507bd9e69d95c2b98c475332ddf1819a43b0d5630fa865502
+MISC ChangeLog 2305 RMD160 f55dff2019efb96120a3116b608f989ac99b4019 SHA1 4c56ae094f37b9f33a7384df745647862b55563a SHA256 6964b543f434700dcbe401f0e7461ecb270854955d1b36f4100b60a584a2c0be
 MISC metadata.xml 321 RMD160 38328099fe4e3737564b5075ba94015829a70953 SHA1 48dbdf9f010778df1a854d8b1cce37da8adfac62 SHA256 df59705cd6050e64fd7d238a1ee22836d82f34a69c0db9d8cc70edfded51dc7e
