@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  06 Apr 2008; Davide Cendron (scen) <scen@gentoo.org>
+  -uhexen2-1.4.3_rc1.ebuild, +uhexen2-1.4.3.ebuild:
+  Version bump
+
   17 Feb 2008; Davide Cendron (scen) <scen@gentoo.org>
   -files/uhexen2-1.4.2_fix_huffman-vuln.patch:
   Remove old patch
